21.dec (tb)
      - updating Dutch translation by Jaap Plaisier
20.dec (ws)
      - new measure property: break multi measure rest
      - first experimental implementation of "multi measure rests".
19.dec (ws)
      - fixed crash when undo delete bracket
      - right align system brackets
      - fixed crash when moving system brackets
      - renamed template files replacing "_" with " "
      (la)
	    - correct issue on full measure rest in musicXML export
	    - improve support of octave-shift in musicXML import
      (db)
      - changed gateTime numbers in template files to match new default
      - removed pageFormat tag from leadsheet, piano, and choir templates.
        New scores based on these templates now adopt the default page size set by the user
18.dec (tb)
      - updating Hindi translation from Balvihar Grindia
       (ws)
      - implement style value "bracket distance"
      - system brackets can now be moved to different column in edit mode with
        Shift+right and Shift+left
      - fix display of sharp/flat in a slash chord name
      - change chord name layout: align chord name to base line
      - fixed crash when pressing "+" in note entry mode and then adding note with mouse
        in next measure (and a rest beween first and second note).
17.dec (ws)
      - added brazilian portuguese translation from israelzeu703
      - use page size preference when creating new score
      - fix pdf export for scores with custom page sizes
      - fix for page settings / custom page size; also show right width/height after
        change of landscape/portrait
16.dec (ws)
      - fix for autobeamer; "begin beam" did not always work
      - fix path for embedded images
15.dec (ws)
      - use sharp/flat symbols in chord names if "use symbols" for chord names is enabled
        in style
      - added page size preference (unfinished)
      - fixed measure repeat symbol
      (tb)
      - updated dutch translation from Jaap Plaisier
      (db)